[package]
name = "clinch"
version = "0.1.8"
authors = ["Claude Pilatre"]
edition = "2018"
description = "A command line app to retrieve Sinch inbound messages"
license = "MIT"
keywords = ["cli", "sinch"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
structopt = "0.3.26"
console = "0.15.5"
base64 = "0.21.0"
chrono = "0.4.24"
num_cpus = "1.13.0"
openssl-sys = "0.9.87"